# nba_line_predictions

./: LICENSE  README.md
generated_datasets/: final_odds_df.csv  train_df.csv
project/: Dockerfile  neural_network_model.pkl  pyproject.toml  xgb_model.pkl
project/src/: 1_pull_final_team_stats.ipynb  2_pull_odds_data.ipynb  3_construct_training_set.ipynb  4_initial_model.ipynb  5_final_model_dev.ipynb  main.py
