[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["RYAN MITCHELL <ryan.mitchell@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
nba-api = "^1.2.1"
requests = "^2.31.0"
ordered-set = "^4.1.0"
fastapi = "^0.103.2"
pytest = "^7.4.2"
sbrscrape = "^0.0.8"
openpyxl = "^3.1.2"
tensorflow = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
